--- a/homeworks/nikolay.krasniuk_Kingstar22/6-adaptive/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/6-adaptive/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>6-adaptive</title>
-        <link rel="stylesheet" href="/css/fonts.css">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/fonts.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header class="header">
@@ -41,8 +41,8 @@
                 </div>
             </article>
             <picture class="delivery__picture">
-                <source srcset="/img/retina_desctop.png">
-                <img class="delivery__img" src="/img/desctop.png" alt="delivery_moto">
+                <source srcset="img/retina_desctop.png">
+                <img class="delivery__img" src="img/desctop.png" alt="delivery_moto">
             </picture>
 
         </section>
@@ -53,48 +53,48 @@
             </p>
             <article class="benefits__cards">
                 <div class="benefits__item">
-                    <img class="benefits__item-icon" src="/icons/benefits/card1.svg" alt="industry">
+                    <img class="benefits__item-icon" src="icons/benefits/card1.svg" alt="industry">
                     <p class="benefits__item-title">Industry-leading tech</p>
 
                     <p class="benefits__item-description">Delivery is process of transporting from source point to predefined destination.</p>
                 </div>
                 <div class="benefits__item">
-                    <img class="benefits__item-icon" src="/icons/benefits/card2.svg" alt="nationwide">
+                    <img class="benefits__item-icon" src="icons/benefits/card2.svg" alt="nationwide">
                     <p class="benefits__item-title">Industry-leading tech</p>
                     <p class="benefits__item-description">Delivery is process of transporting from source point to predefined destination.</p>
                 </div>
                 <div class="benefits__item">
-                    <img class="benefits__item-icon" src="/icons/benefits/card3.svg" alt="fastest">
+                    <img class="benefits__item-icon" src="icons/benefits/card3.svg" alt="fastest">
                     <p class="benefits__item-title">Industry-leading tech</p>
                     <p class="benefits__item-description">Delivery is process of transporting from source point to predefined destination.</p>
                 </div>
                 <div class="benefits__item">
-                    <img class="benefits__item-icon" src="/icons/benefits/card4.svg" alt="investment">
+                    <img class="benefits__item-icon" src="icons/benefits/card4.svg" alt="investment">
                     <p class="benefits__item-title">Industry-leading tech</p>
                     <p class="benefits__item-description">Delivery is process of transporting from source point to predefined destination.</p>
                 </div>
                 <div class="benefits__item">
-                    <img class="benefits__item-icon" src="/icons/benefits/card5.svg" alt="rates">
+                    <img class="benefits__item-icon" src="icons/benefits/card5.svg" alt="rates">
                     <p class="benefits__item-title">Industry-leading tech</p>
                     <p class="benefits__item-description">Delivery is process of transporting from source point to predefined destination.</p>
                 </div>
                 <div class="benefits__item">
-                    <img class="benefits__item-icon" src="/icons/benefits/card6.svg" alt="handling">
+                    <img class="benefits__item-icon" src="icons/benefits/card6.svg" alt="handling">
                     <p class="benefits__item-title">Industry-leading tech</p>
                     <p class="benefits__item-description">Delivery is process of transporting from source point to predefined destination.</p>
                 </div>
                 <div class="benefits__item">
-                    <img class="benefits__item-icon" src="/icons/benefits/card7.svg" alt="insurance">
+                    <img class="benefits__item-icon" src="icons/benefits/card7.svg" alt="insurance">
                     <p class="benefits__item-title">Industry-leading tech</p>
                     <p class="benefits__item-description">Delivery is process of transporting from source point to predefined destination.</p>
                 </div>
                 <div class="benefits__item">
-                    <img class="benefits__item-icon" src="/icons/benefits/card8.svg" alt="verified">
+                    <img class="benefits__item-icon" src="icons/benefits/card8.svg" alt="verified">
                     <p class="benefits__item-title">Industry-leading tech</p>
                     <p class="benefits__item-description">Delivery is process of transporting from source point to predefined destination.</p>
                 </div>
                 <div class="benefits__item">
-                    <img class="benefits__item-icon" src="/icons/benefits/card9.svg" alt="monitoring">
+                    <img class="benefits__item-icon" src="icons/benefits/card9.svg" alt="monitoring">
                     <p class="benefits__item-title">Industry-leading tech</p>
                     <p class="benefits__item-description">Delivery is process of transporting from source point to predefined destination.</p>
                 </div>
@@ -102,8 +102,8 @@
         </section>
         <section class="apply">
             <picture class="apply__picture">
-                <source srcset="/img/retina_desctop2.png">
-                <img class="apply__img" src="/img/desctop2.png" alt="delivery_moto">
+                <source srcset="img/retina_desctop2.png">
+                <img class="apply__img" src="img/desctop2.png" alt="delivery_moto">
             </picture>
 
             <articl class="apply__content">
@@ -118,13 +118,13 @@
             <main class="news__posts">
                 <article class="news__post">
                     <picture class="news__post-picture">
-                        <source srcset="/img/news/1_news2x.png">
-                        <img class="news__post-img" src="/img/news/1_news.png" alt="post_img">
+                        <source srcset="img/news/1_news2x.png">
+                        <img class="news__post-img" src="img/news/1_news.png" alt="post_img">
                     </picture>
                     <div class="news__signature">
                         <p class="news__signature-text">UI / UX Design</p>
                         <div class="news__signature-views">
-                            <img src="/img/news/revision.svg" alt="revision">
+                            <img src="img/news/revision.svg" alt="revision">
                             <p class="news__signature-views-text">12450</p>
                         </div>
                     </div>
@@ -133,18 +133,18 @@
 
                     <a class="news__learn" href="#">
                         <p class="news__learn-text">Learn More</p>
-                        <img src="/img/news/arrow.svg" alt="arrow_learn">
+                        <img src="img/news/arrow.svg" alt="arrow_learn">
                     </a>
                 </article>
                 <article class="news__post">
                     <picture class="news__post-picture">
-                        <source srcset="/img/news/2_news2x.png">
-                        <img class="news__post-img" src="/img/news/2_news.png" alt="post_img">
+                        <source srcset="img/news/2_news2x.png">
+                        <img class="news__post-img" src="img/news/2_news.png" alt="post_img">
                     </picture>
                     <div class="news__signature">
                         <p class="news__signature-text">Apps Design</p>
                         <div class="news__signature-views">
-                            <img src="/img/news/revision.svg" alt="revision">
+                            <img src="img/news/revision.svg" alt="revision">
                             <p class="news__signature-views-text">2953</p>
                         </div>
                     </div>
@@ -153,18 +153,18 @@
 
                     <a class="news__learn" href="#">
                         <p class="news__learn-text">Learn More</p>
-                        <img src="/img/news/arrow.svg" alt="arrow_learn">
+                        <img src="img/news/arrow.svg" alt="arrow_learn">
                     </a>
                 </article>
                 <article class="news__post">
                     <picture class="news__post-picture">
-                        <source srcset="/img/news/3_news2x.png">
-                        <img class="news__post-img" src="/img/news/3_news.png" alt="post_img">
+                        <source srcset="img/news/3_news2x.png">
+                        <img class="news__post-img" src="img/news/3_news.png" alt="post_img">
                     </picture>
                     <div class="news__signature">
                         <p class="news__signature-text">Product Experience</p>
                         <div class="news__signature-views">
-                            <img src="/img/news/revision.svg" alt="revision">
+                            <img src="img/news/revision.svg" alt="revision">
                             <p class="news__signature-views-text">7980</p>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                     <p class="news__post-description">Our UX design agency creates solutions to address product usability conversion rates an the ever-present challenges of user-retention & engagement.</p>
                     <a class="news__learn" href="#">
                         <p class="news__learn-text">Learn More</p>
-                        <img class="news__learn-arrow" src="/img/news/arrow.svg" alt="arrow_learn">
+                        <img class="news__learn-arrow" src="img/news/arrow.svg" alt="arrow_learn">
                     </a>
                 </article>
             </main>
@@ -181,22 +181,22 @@
             <h2 class="clients__title">Our Clients</h2>
             <main class="clients__content">
                 <a href="#">
-                    <img src="/img/clients/google.svg" alt="google">
+                    <img src="img/clients/google.svg" alt="google">
                 </a>
                 <a href="#">
-                    <img src="/img/clients/microsoft.svg" alt="microsoft">
+                    <img src="img/clients/microsoft.svg" alt="microsoft">
                 </a>
                 <a href="#">
-                    <img src="/img/clients/flickr.svg" alt="flickr">
+                    <img src="img/clients/flickr.svg" alt="flickr">
                 </a>
                 <a href="#">
-                    <img src="/img/clients/slack.svg" alt="slack">
+                    <img src="img/clients/slack.svg" alt="slack">
                 </a>
                 <a href="#">
-                    <img src="/img/clients/syngental.svg" alt="syngental">
+                    <img src="img/clients/syngental.svg" alt="syngental">
                 </a>
                 <a href="#">
-                    <img src="/img/clients/merck.svg" alt="merck">
+                    <img src="img/clients/merck.svg" alt="merck">
                 </a>
             </main>
         </section>
@@ -208,19 +208,19 @@
                         Mohammadpur, Dhaka, Bangladesh</p>
                     <div class="footer__contacts-social">
                         <a href="#">
-                            <img src="/icons/footer/facebook.svg" alt="facebook">
+                            <img src="icons/footer/facebook.svg" alt="facebook">
                         </a>
                         <a href="#">
-                            <img src="/icons/footer/linkedin.svg" alt="linkedin">
+                            <img src="icons/footer/linkedin.svg" alt="linkedin">
                         </a>
                         <a href="#">
-                            <img src="/icons/footer/twiter.svg" alt="twiter">
+                            <img src="icons/footer/twiter.svg" alt="twiter">
                         </a>
                         <a href="#">
-                            <img src="/icons/footer/printerest.svg" alt="printerest">
+                            <img src="icons/footer/printerest.svg" alt="printerest">
                         </a>
                         <a href="#">
-                            <img src="/icons/footer/instagram.svg" alt="instagram">
+                            <img src="icons/footer/instagram.svg" alt="instagram">
                         </a>
                     </div>
                 </article>
