style name change

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/6-adaptive/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/6-adaptive/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>Document</title>
     </head>
@@ -26,76 +27,76 @@
             </div>
         </header>
         <main class="main">
-            <div class="main__process">
-                <div class="main__process_section">
-                    <div class="main__process_information">
-                        <div class="main__process-head">
+            <div class="process">
+                <div class="process__section">
+                    <div class="process__information">
+                        <div class="process__head">
                             <p>
                                 Delivery is Process <br>Going From Source Point to Predefined Destination.
                             </p>
                         </div>
-                        <div class="main__process-text">
+                        <div class="process__text">
                             <p>Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
                         </div>
-                        <div class="main__process-track-percel">
-                            <input class="main__track-percel_input" type="text" value="Type your tracking number">
-                            <button class="main__track-percel_btn" type="button">Track Percel</button>
+                        <div class="process__track-percel">
+                            <input class="process__track-percel_input" type="text" value="Type your tracking number">
+                            <button class="process__track-percel_btn" type="button">Track Percel</button>
                         </div>
                     </div>
-                    <div class="main__process-img">
-                        <picture class="main__process-picture">
+                    <div class="process__img">
+                        <picture class="process-picture">
                             <source srcset="images/bonik_delivery_img_1_2x.png 2x">
-                            <img class="main__delivery-photo" src="images/bonik_delivery_img1.png" alt="bonik delivery">
+                            <img class="process__delivery-photo" src="images/bonik_delivery_img1.png" alt="bonik delivery">
                         </picture>
                     </div>
                 </div>
-                <div class="main__choose-us">
-                    <div class="main__choose-us_information">
-                        <h3 class="main__text-head position-head">Why Choose Us?</h3>
-                        <p class="main__choose-us_text-paragraph">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
+                <div class="choose-us">
+                    <div class="choose-us_information">
+                        <h3 class="main__text-head main__text-head--position-head">Why Choose Us?</h3>
+                        <p class="choose-us__text-paragraph">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
                     </div>
-                    <div class="main__choose-us_list">
-                        <div class="main__choose-us_list-card card-pink">
+                    <div class="choose-us__list">
+                        <div class="choose-us__list-card card-pink">
                             <img src="images/Indastry.svg" alt="Industry-leading tech">
                             <h4 class="card-head">Industry-leading tech</h4>
                             <p class="card-text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="main__choose-us_list-card card-blue-dark">
+                        <div class="choose-us__list-card card-blue-dark">
                             <img src="images/Coverage.svg" alt="Nationwide coverage">
                             <h4 class="card-head">Nationwide coverage</h4>
                             <p class="card-text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="main__choose-us_list-card card-pink-dark">
+                        <div class="choose-us__list-card card-pink-dark">
                             <img src="images/Delivery.svg" alt="Fastest Delivery">
                             <h4 class="card-head">Fastest Delivery</h4>
                             <p class="card-text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="main__choose-us_list-card ccard-blue-light">
+                        <div class="choose-us__list-card ccard-blue-light">
                             <img src="images/Payment.svg" alt="Next day payment">
                             <h4 class="card-head">Next day payment</h4>
                             <p class="card-text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="main__choose-us_list-card card-pink-light">
+                        <div class="choose-us__list-card card-pink-light">
                             <img src="images/Rates.svg" alt="Best COD rates">
                             <h4 class="card-head">Best COD rates</h4>
                             <p class="card-text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="main__choose-us_list-card card-pink">
+                        <div class="choose-us__list-card card-pink">
                             <img src="images/Secure.svg" alt="Secure handling">
                             <h4 class="card-head">Secure handling</h4>
                             <p class="card-text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="main__choose-us_list-card card-blue">
+                        <div class="choose-us__list-card card-blue">
                             <img src="images/19-insurance.svg" alt="Product insurance">
                             <h4 class="card-head">Product insurance</h4>
                             <p class="card-text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="main__choose-us_list-card card-pink-dark">
+                        <div class="choose-us__list-card card-pink-dark">
                             <img src="images/Verified.svg" alt="Verified Products">
                             <h4 class="card-head">Verified Products</h4>
                             <p class="card-text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="main__choose-us_list-card card-blue-dark">
+                        <div class="choose-us__list-card card-blue-dark">
                             <img src="images/Realtime.svg" alt="Realtime Monitoring">
                             <h4 class="card-head">Realtime Monitoring</h4>
                             <p class="card-text">Delivery is process of transporting from source point to predefined destination.</p>
@@ -103,28 +104,28 @@
                     </div>
                 </div>
             </div>
-            <div class="main__apply">
-                <div class="main__apply-img">
-                    <picture class="main__apply-picture">
+            <div class="apply">
+                <div class="apply__img">
+                    <picture class="apply__picture">
                         <source srcset="images/bonik_delivery_img_02_1_2x.png 2x">
-                        <img class="main__apply_delivery-photo" src="images/bonik_delivery_img_02_1.png" alt="bonik delivery">
+                        <img class="apply__delivery-photo" src="images/bonik_delivery_img_02_1.png" alt="bonik delivery">
                     </picture>
                 </div>
-                <div class="main__apply-for-ambassador">
+                <div class="apply__for-ambassador">
                     <div class="main__text-head">Apply for Ambassador</div>
-                    <div class="main__apply-for-ambassador-text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</div>
-                    <button class="main__apply-for-ambassador-btn" type="button">Apply Now</button>
+                    <div class="apply__for-ambassador_text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</div>
+                    <button class="apply__for-ambassador_btn" type="button">Apply Now</button>
                 </div>
             </div>
-            <div class="main__news">
-                <div class="main__news-information">
-                    <h3 class="main__text-head news-head">Company News Our Latest Artical & Tips for You</h3>
+            <div class="news">
+                <div class="news__information">
+                    <h3 class="main__text-head main__text-head--news-head">Company News Our Latest Artical & Tips for You</h3>
                 </div>
-                <div class="main__news_list">
-                    <div class="main__news_list-card">
-                        <picture class="news_list-card-picture">
+                <div class="news__list">
+                    <div class="news__list_card">
+                        <picture class="news__list_picture">
                             <source srcset="images/Rectangle_21_2x.png 2x">
-                            <img class="main__news_list-card-img" src="images/Rectangle_21.png" alt="bonik delivery products">
+                            <img class="news__list_img" src="images/Rectangle_21.png" alt="bonik delivery products">
                         </picture>
                         <div class="card__product">
                             <p class="card__product_text">UI / UX Design</p>
@@ -136,10 +137,10 @@
                             </div>
                         </div>
                         <div class="card__text">
-                            <h3 class="card__text-head">
+                            <h3 class="card__head">
                                 Our UX studio digitally transforms <br> business through design
                             </h3>
-                            <p class="card__text-paragraph">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
+                            <p class="card__paragraph">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
                         </div>
                         <div class="card__learn-more">
                             <p class="card__learn-more_link">Learn More</p>
@@ -149,10 +150,10 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="main__news_list-card">
-                        <picture class="news_list-card-picture">
+                    <div class="news__list_card">
+                        <picture class="news__list_picture">
                             <source srcset="images/Rectangle_22_2x.png 2x">
-                            <img class="main__news_list-card-img" src="images/Rectangle_22.png" alt="bonik delivery products">
+                            <img class="news__list_img" src="images/Rectangle_22.png" alt="bonik delivery products">
                         </picture>
                         <div class="card__product">
                             <p class="card__product_text">Apps Design</p>
@@ -164,10 +165,10 @@
                             </div>
                         </div>
                         <div class="card__text">
-                            <h3 class="card__text-head">
+                            <h3 class="card__head">
                                 Your customer do need comprehensive course to learn how to use your app.
                             </h3>
-                            <p class="card__text-paragraph">Let’s be honest. Finance isn’t exactly pinnacle fun.Online companies introduced gamification elements to their products reach up to a 700% increase in conversion rates.</p>
+                            <p class="card__paragraph">Let’s be honest. Finance isn’t exactly pinnacle fun.Online companies introduced gamification elements to their products reach up to a 700% increase in conversion rates.</p>
                         </div>
                         <div class="card__learn-more">
                             <p class="card__learn-more_link">Learn More</p>
@@ -177,10 +178,10 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="main__news_list-card">
-                        <picture class="news_list-card-picture">
+                    <div class="news__list_card">
+                        <picture class="news__list_picture">
                             <source srcset="images/Rectangle_20_2x.png 2x">
-                            <img class="main__news_list-card-img" src="images/Rectangle_20.png" alt="bonik delivery products">
+                            <img class="news__list_img" src="images/Rectangle_20.png" alt="bonik delivery products">
                         </picture>
                         <div class="card__product">
                             <p class="card__product_text">Product Experience</p>
@@ -192,10 +193,10 @@
                             </div>
                         </div>
                         <div class="card__text">
-                            <h3 class="card__text-head">
+                            <h3 class="card__head">
                                 Scale your startup through exceptional product experience
                             </h3>
-                            <p class="card__text-paragraph">Our UX design agency creates solutions to address product usability conversion rates an the ever-present challenges of user-retention & engagement.</p>
+                            <p class="card__paragraph">Our UX design agency creates solutions to address product usability conversion rates an the ever-present challenges of user-retention & engagement.</p>
                         </div>
                         <div class="card__learn-more">
                             <p class="card__learn-more_link">Learn More</p>
@@ -207,11 +208,11 @@
                     </div>
                 </div>
             </div>
-            <div class="main__our-clients">
-                <div class="main__our-clients">
-                    <h3 class="main__text-head position-head">Our Clients</h3>
+            <div class="our-clients">
+                <div class="main__our-clients_head">
+                    <h3 class="main__text-head main__text-head--position-head">Our Clients</h3>
                 </div>
-                <div class="main__our-clients_logos">
+                <div class="our-clients__logos">
                     <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M51.353 21.0502C51.353 26.805 46.9071 31.0457 41.4509 31.0457C35.9948 31.0457 31.5488 26.805 31.5488 21.0502C31.5488 15.2548 35.9948 11.0547 41.4509 11.0547C46.9071 11.0547 51.353 15.2548 51.353 21.0502ZM47.0183 21.0502C47.0183 17.454 44.4416 14.9934 41.4509 14.9934C38.4603 14.9934 35.8835 17.454 35.8835 21.0502C35.8835 24.6103 38.4603 27.107 41.4509 27.107C44.4416 27.107 47.0183 24.6058 47.0183 21.0502Z" fill="#EA4335"></path>
                         <path d="M72.7148 21.0502C72.7148 26.805 68.2689 31.0457 62.8127 31.0457C57.3566 31.0457 52.9106 26.805 52.9106 21.0502C52.9106 15.2593 57.3566 11.0547 62.8127 11.0547C68.2689 11.0547 72.7148 15.2548 72.7148 21.0502ZM68.3802 21.0502C68.3802 17.454 65.8034 14.9934 62.8127 14.9934C59.8221 14.9934 57.2453 17.454 57.2453 21.0502C57.2453 24.6103 59.8221 27.107 62.8127 27.107C65.8034 27.107 68.3802 24.6058 68.3802 21.0502Z" fill="#FBBC05"></path>
